Z2/Z4/.gcc.out
/rhome/a/amulalic1/workspace/UUP/Z2/Z4/main.c: In function ‘main’:
/rhome/a/amulalic1/workspace/UUP/Z2/Z4/main.c:90:4: error: ‘indexNajmanjeKombinacije’ undeclared (first use in this function); did you mean ‘indexNajmanjeKombinacijeK’?
    indexNajmanjeKombinacije=-1;
    ^~~~~~~~~~~~~~~~~~~~~~~~
    indexNajmanjeKombinacijeK
/rhome/a/amulalic1/workspace/UUP/Z2/Z4/main.c:90:4: note: each undeclared identifier is reported only once for each function it appears in
